[package]
name = "configuer"
version = "0.1.0"
license = "MIT"
description = "Tiny lib to help you organize your configuration data"
homepage = "https://github.com/Milesq/configuer"
authors = ["Milesq <wmilosz88@gmail.com>"]
edition = "2018"
readme = "README.md"

[features]
default = ["dirs"]

[dependencies]
dirs = { version = "3.0.1", optional = true }
serde = { version = "1.0.114", features = ["derive"] }
bincode = "1.3.1"
